# Boost_OpenMPI_GoogleTests_Examples

./: CMakeLists.txt  LICENSE  Makefile  Makefile.bk  run
cmake/: Boost.cmake  CMakeCommon.cmake  Colors.cmake  OpenMPI.cmake  OutSourceBuild.cmake  Python.cmake
src/: CMakeLists.txt
src/boost/: CMakeLists.txt  __init__.py  main.cpp  main.python.hello.cpp  main.python.numpy.cpp
src/boost_ompi/: CMakeLists.txt  main.boost.ompi.cpp  main.boost.threading.ompi.cpp  main.filesystem.ompi.cpp  main.p2p.blocking.ompi.cpp  main.p2p.non-blocking.ompi.cpp
src/cpp/: CEng.hpp  CEng.hxx  CMakeLists.txt  DGen.hpp  DGen.hxx  MUtil.h  NNet.hpp  NNet.hxx  loadMNIST.py  main.cpp  main.std.stl.NN.layers.vararg.cpp  main.std.stl.NN.layers.vararg.linked.cpp  main.std.stl.NN.layers.vararg_copy.cpp  main.std.stl.examples.cpp  matrix_operations.cpp  multi_perceptron.py  multi_perceptron_snippet.py  simple_lib.cpp  simple_lib.hpp  tests.hpp
src/ompi/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  gtest-mpi-listener.hpp  test_gtest_boost_mpi.cpp  test_gtest_mpi.cpp  test_gtest_mpi_listener.cpp
